NXP-33272: cleanup / format